# fab-dep

./: .gitignore  Dockerfile  Pipfile  control  deploy.py  fab.py  fab.spec  linux_deploy.py  make_control_file.py  make_dep.sh  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
fab_deploy/: __init__.py  __main__.py  bootstrap.py  cli.py  const.py  crypto.py  download.py  exceptions.py  shortcuts.py
tests/: common.py  conftest.py  test_cli.py  test_const.py  test_shortcuts.py
tests/test_files/: archive.ease.aes  archive.ease.tar.bz2  version.json
tools/: deploy.py  ftp.py  inc_mod_path.iss  make_control_file.py  make_dep.sh  modpath.iss
