[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fab_deploy"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "click >=7.0",
    "colorama >=0.4.1",
    "cryptography >=2.6.1",
    "pydantic >= 0.24",
    "requests >=2.21.0",
]
requires-python = ">=3.5"

[tool.flit.scripts]
fab = "fab_deploy.cli:main"
